--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <meta property="og:title" content="Hindu Cafe foundation" />
   <meta property="og:url" content="http://hinducafefoundation.org/" />
-  <meta property="og:image" content="https://www.facebook.com/TheHinduCafeOfficial/photos/a.403128350493408/545028456303396" />
+  <meta property="og:image" content="https://scontent.fdel41-1.fna.fbcdn.net/v/t1.6435-9/71700757_545028459636729_4658968218172391424_n.jpg?_nc_cat=1&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=9PwBHr1pSdIAX_1S15L&_nc_ht=scontent.fdel41-1.fna&oh=a179780fb7832e529b83cb53fb1212ae&oe=60AD47D6" />
   <meta property="og:description" content="Contribution of Hindu Temples/Organisations during the corona pandemic" />
   <meta property="og:site_name" content="Hindu Cafe foundation" />
+  <link rel="shortcut icon" type="image/jpg" href="https://scontent.fdel41-1.fna.fbcdn.net/v/t1.6435-9/71700757_545028459636729_4658968218172391424_n.jpg?_nc_cat=1&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=9PwBHr1pSdIAX_1S15L&_nc_ht=scontent.fdel41-1.fna&oh=a179780fb7832e529b83cb53fb1212ae&oe=60AD47D6"/>
+
   <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=6089855eedbfd5001100106e&product=inline-share-buttons" async="async"></script>
 
 </head>
@@ -20,7 +22,9 @@
 <div class="container">
   <div>
   <h2 class="text-center">Contribution of Hindu Temples/Organisations during the corona pandemic</h2>
-  <div class="sharethis-inline-share-buttons"></div>
+  <div class=" row align-items-center">
+  <div  class="col" class="sharethis-inline-share-buttons"></div>
+</div>
   </div>
   <hr>
   <p></p>            
