--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div class="container">
   <div>
-  <h2 >Contribution of Hindu Temples/Organisations during the corona pandemic</h2>
+  <h2 class="text-center">Contribution of Hindu Temples/Organisations during the corona pandemic</h2>
   <div class="container">
   <div class="row">
     <div class="col-sm"></div>
