--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--   <meta property="og:image" content="" /> -->
   <meta property="og:description" content="Contribution of Hindu Temples/Organisations during the corona pandemic" />
   <meta property="og:site_name" content="Hindu Cafe foundation" />
-  <link rel="shortcut icon" type="image/jpg" href="https://scontent.fdel41-1.fna.fbcdn.net/v/t1.6435-9/71700757_545028459636729_4658968218172391424_n.jpg?_nc_cat=1&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=9PwBHr1pSdIAX_1S15L&_nc_ht=scontent.fdel41-1.fna&oh=a179780fb7832e529b83cb53fb1212ae&oe=60AD47D6"/>
+  <link rel="shortcut icon" type="image/jpg" href=""/>
 
   <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=6089855eedbfd5001100106e&product=inline-share-buttons" async="async"></script>
 <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=608987bdc4f9540011c63526&product=sop' async='async'></script>
